--- a/GameData/ColorCodedCanisters/Patches/ColorCodedCanisters-MM-engines.cfg
+++ b/GameData/ColorCodedCanisters/Patches/ColorCodedCanisters-MM-engines.cfg
@@ -7,7 +7,7 @@
 		scale = 1.0, 1.0, 1.0
 	}
 	MODEL {
-		model = ColorCodedCans/CCcoin1m
+		model = ColorCodedCanisters/Assets/CCcoin1m
 		scale = 0.8, 0.8, 0.8
 		position = 0.0, 0.721461, 0.0
 	}
@@ -21,7 +21,7 @@
 		scale = 1.0, 1.0, 1.0
 	}
 	MODEL {
-		model = ColorCodedCans/CCcoin1m
+		model = ColorCodedCanisters/Assets/CCcoin1m
 		scale = 0.8, 0.8, 0.8
 		position = 0.0, 0.721461, 0.0
 	}
@@ -35,7 +35,7 @@
 		scale = 1.0, 1.0, 1.0
 	}
 	MODEL {
-		model = ColorCodedCans/CCcoin1m
+		model = ColorCodedCanisters/Assets/CCcoin1m
 		scale = 0.8, 0.8, 0.8
 		position = 0.0, 0.216498, 0.0
 	}
@@ -50,7 +50,7 @@
 		scale = 1.0, 1.0, 1.0
 	}
 	MODEL {
-		model = ColorCodedCans/CCcoin1m
+		model = ColorCodedCanisters/Assets/CCcoin1m
 		scale = 1.0, 1.0, 1.0
 		position = 0.0, 1.40383, 0.0
 	}
@@ -64,7 +64,7 @@
 		scale = 1.0, 1.0, 1.0
 	}
 	MODEL {
-		model = ColorCodedCans/CCcoin1m
+		model = ColorCodedCanisters/Assets/CCcoin1m
 		scale = 0.8, 0.8, 0.8
 		position = 0.0, 0.1, 0.0
 	}
@@ -80,7 +80,7 @@
 		scale = 1.0, 1.0, 1.0
 	}
 	MODEL {
-		model = ColorCodedCans/CCcoin2m
+		model = ColorCodedCanisters/Assets/CCcoin2m
 		scale = 1.5, 1.1, 1.5
 		position = 0.0, 0.73, 0.0
 	}
@@ -96,7 +96,7 @@
 		scale = 1.0, 1.0, 1.0
 	}
 	MODEL {
-		model = ColorCodedCans/CCcoin2m
+		model = ColorCodedCanisters/Assets/CCcoin2m
 		scale = 1.5, 1.1, 1.5
 		position = 0.0, 0.0, 0.0
 	}
@@ -112,7 +112,7 @@
 		scale = 1.0, 1.0, 1.0
 	}
 	MODEL {
-		model = ColorCodedCans/CCcoin2m
+		model = ColorCodedCanisters/Assets/CCcoin2m
 		scale = 1.5, 1.1, 1.5
 		position = 0.0, 1.06, 0.0
 	}
@@ -129,7 +129,7 @@
 		scale = 1.0, 1.0, 1.0
 	}
 	MODEL {
-		model = ColorCodedCans/CCdome2m
+		model = ColorCodedCanisters/Assets/CCdome2m
 		scale = 1.0, 1.0, 1.0
 		position = 0.0, 4.356, 0.0
 	}
@@ -146,7 +146,7 @@
 		scale = 1.0, 1.0, 1.0
 	}
 	MODEL {
-		model = ColorCodedCans/CCcoin3m
+		model = ColorCodedCanisters/Assets/CCcoin3m
 		scale = 1.0, 1.0, 1.0
 		position = 0.0, 1.487975, 0.0
 	}
@@ -163,7 +163,7 @@
 		scale = 1.0, 1.0, 1.0
 	}
 	MODEL {
-		model = ColorCodedCans/CCcoin3m
+		model = ColorCodedCanisters/Assets/CCcoin3m
 		scale = 1.0, 1.0, 1.0
 		position = 0.0, 1.527248, 0.0
 	}
