--- a/GameData/ColorCodedCanisters/Patches/ColorCodedCanisters-MM-spp.cfg
+++ b/GameData/ColorCodedCanisters/Patches/ColorCodedCanisters-MM-spp.cfg
@@ -1,7 +1,7 @@
 @PART[adapterMk3-Size2]:NEEDS[!VenStockRevamp]
 {
 	MODEL {
-		model = ColorCodedCans/CCcoin2m
+		model = ColorCodedCanisters/Assets/CCcoin2m
 		scale = 1.75, 1.5, 1.75
 		position = 0.0, 1.855, 0.0
 	}
@@ -9,7 +9,7 @@
 @PART[adapterMk3-Size2Slant]:NEEDS[!VenStockRevamp]
 {
 	MODEL {
-		model = ColorCodedCans/CCcoin2m
+		model = ColorCodedCanisters/Assets/CCcoin2m
 		scale = 1.75, 1.5, 1.75
 		position = 0.0, 1.855, -0.625
 	}
@@ -17,7 +17,7 @@
 @PART[adapterSize2-Size1]:NEEDS[!VenStockRevamp]
 {
 	MODEL {
-		model = ColorCodedCans/CCcoin1m
+		model = ColorCodedCanisters/Assets/CCcoin1m
 		scale = 1.0, 1.0, 1.0
 		position = 0.0, 1.3, 0.0
 	}
@@ -25,7 +25,7 @@
 @PART[adapterSize2-Size1Slant]:NEEDS[!VenStockRevamp]
 {
 	MODEL {
-		model = ColorCodedCans/CCcoin1m
+		model = ColorCodedCanisters/Assets/CCcoin1m
 		scale = 1.0, 1.0, 1.0
 		position = 0.0, 1.3, -0.625
 	}
@@ -33,7 +33,7 @@
 @PART[mk2_1m_AdapterLong]:NEEDS[!VenStockRevamp]
 {
 	MODEL {
-		model = ColorCodedCans/CCcoin1m
+		model = ColorCodedCanisters/Assets/CCcoin1m
 		scale = 1.0, 1.0, 1.0
 		position = 0.0, 1.925, 0.0
 	}
@@ -41,7 +41,7 @@
 @PART[mk2SpacePlaneAdapter]:NEEDS[!VenStockRevamp]
 {
 	MODEL {
-		model = ColorCodedCans/CCcoin1m
+		model = ColorCodedCanisters/Assets/CCcoin1m
 		scale = 1.0, 1.0, 1.0
 		position = 0.0, 0.9875, 0.0
 	}
